# data

./: .coverage  .flaskenv  .gitignore  Procfile  README.md  add_contributions.py  address_searcher.py  analyze_contributions.py  app.py  bootstrap_stuff.py  chloropleth.py  choropleth.py  config.py  conftest.py  contrib.py  database.py  geojson_test.py  initialize_data.py  map.py  mapping.py  maps.py  mayor.py  mec_query.py  models.py  pg_dump  plotting.py  pyproject.toml  results_handler.py  results_reader.py  test_architecture.py  test_dash.py  test_graphs.py  test_maps.py  test_mayor.py  test_results_handler.py  test_results_reader.py  wsgi.py
.devcontainer/: devcontainer-lock.json  devcontainer.json
assets/: 01_first.css
db/: env.py  seeds.py
db/versions/: 2c5cccb2ab36_initial_migration.py  5e85b2e4b45a_initial.py
donation_map/: add_contributions.py  analyze_contributions.py  bootstrap_stuff.py  contrib.py  dashboard.py  mapping.py  maps.py  plotting.py
donation_map/static/: stl-region-zip_rw.geojson
donation_map/static/geobuf/: Comptroller-neighborhoods-and-municipalities.pbf  Comptroller-stl-region-zip.pbf  Ward1-neighborhoods-and-municipalities.pbf  Ward11-neighborhoods-and-municipalities.pbf  Ward11-stl-region-zip.pbf  Ward12-neighborhoods-and-municipalities.pbf  Ward12-stl-region-zip.pbf  Ward13-stl-region-zip.pbf  Ward17-stl-city-and-county-precincts.pbf  Ward25-stl-city-and-county-precincts.pbf  Ward25-stl-region-zip.pbf  Ward27-neighborhoods-and-municipalities.pbf  Ward27-stl-region-zip.pbf  Ward3-stl-city-and-county-precincts.pbf  Ward4-stl-region-zip.pbf  Ward7-stl-region-zip.pbf  Ward9-neighborhoods-and-municipalities.pbf  Ward9-stl-region-zip.pbf  neighborhoods-and-municipalities.pbf
dsadata/: __init__.py  address_searcher.py  bootstrap_stuff.py  dashboard.py  mapping.py  maps.py  mec_query.py  models.py  plotting.py
dsadata/assets/: 01_first.css
dsadata/static/: candidates_2021-03-02.csv
dsadata/static/geobuf/: Comptroller-neighborhoods-and-municipalities.pbf  Comptroller-stl-city-and-county-precincts.pbf  Comptroller-stl-region-zip.pbf  Mayor-neighborhoods-and-municipalities.pbf  Mayor-stl-city-and-county-precincts.pbf  Mayor-stl-region-zip.pbf  Ward1-neighborhoods-and-municipalities.pbf  Ward1-stl-city-and-county-precincts.pbf  Ward1-stl-region-zip.pbf  Ward11-neighborhoods-and-municipalities.pbf  Ward11-stl-city-and-county-precincts.pbf  Ward11-stl-region-zip.pbf  (+48 more)
notebooks/: scratch.ipynb
static/geobuf/: neighborhoods-and-townships.pbf  stl-city-and-county-precincts.pbf  stl-city-neighborhoods.pbf  stl-city-precincts.pbf  stl-region-zip.pbf
tests/: conftest.py  geojson_test.py  test_architecture.py  test_dash.py  test_database.py  test_flask.py  test_graphs.py  test_maps.py
