[project]
name = "donation-map"
version = "0.1.0"
description = "A dashboard for election and campaign finance data in the St Louis metro region"
authors = [
    {name="Tyler Schlichenmeyer", email="ty.schlich@gmail.com"},
    {name="Mitch Eagles"}
]
license = "GPL-3.0-or-later"
dependencies = [
    "dash-leaflet",
    "pandas",
    "geopandas",
    "pyshp",
    "datatest",
    "numpy",
    "dash-extensions",
    "dash-bootstrap-components",
    "python-dotenv",
    "dash-daq",
    "geojson-rewind",
    "dash",
    "geobuf",
    "pytest",
    "descartes",
    "dash",
    "pycycle",
    "pydantic",
    "duckdb",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"